crates/libaipm/src/make/snapshots/libaipm__make__templates__tests__agent_template_snapshot.snap
---
source: crates/libaipm/src/make/templates.rs
assertion_line: 84
expression: content
---
---
name: my-plugin
description: "TODO: Describe my-plugin"
tools: []
---

# my-plugin

Add your agent instructions here.
