crates/libaipm/src/make/snapshots/libaipm__make__templates__tests__mcp_template_snapshot.snap
---
source: crates/libaipm/src/make/templates.rs
assertion_line: 90
expression: content
---
{
  "mcpServers": {}
}
