crates/libaipm/src/make/snapshots/libaipm__make__templates__tests__output_style_template_snapshot.snap
---
source: crates/libaipm/src/make/templates.rs
assertion_line: 102
expression: content
---
---
name: my-plugin
---

Add your output style definition here.
