crates/libaipm/src/make/snapshots/libaipm__make__templates__tests__skill_template_snapshot.snap
---
source: crates/libaipm/src/make/templates.rs
assertion_line: 78
expression: content
---
---
name: my-plugin
description: "TODO: Describe my-plugin"
---

# my-plugin

Add your skill instructions here.
